# Rate-Limiter

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  rate_limiter_docs.md  requirements-dev.in  requirements-dev.lock.txt  requirements-dev.txt  requirements-yaml.txt  requirements.txt
.github/workflows/: ci.yml
Schema/: README.md  cli-benchmark-output.schema.json  cli-inspect-output.schema.json  cli-list-output.schema.json  cli-reset-output.schema.json  cli-simulate-output.schema.json  config.schema.json  decision.schema.json  metrics.schema.json
configs/: sample_limits.json  sample_limits.toml  sample_limits.yaml
docs/: SCOPE.md  algorithms.md  cli.md  concurrency.md  failure_demos.md  storage.md  tradeoffs.md  workers.md
docs/adr/: 0001-lock-striping-and-lru-eviction.md  0002-process-local-in-memory-storage.md  0003-cli-first-interface.md  0004-worker-lifecycle-and-fake-clock-testing.md
src/ratelimiter/: __init__.py  factory.py
src/ratelimiter/algorithms/: __init__.py  base.py  fixed_window.py  leaky_bucket.py  sliding_window_counter.py  token_bucket.py
src/ratelimiter/cli/: main.py
src/ratelimiter/concurrency/: __init__.py  atomic.py  locks.py  unsafe.py
src/ratelimiter/core/: __init__.py  clock.py  config.py  decision.py  errors.py  interface.py
src/ratelimiter/observability/: __init__.py  logging.py  metrics.py  snapshots.py
src/ratelimiter/storage/: __init__.py  base.py  lru.py  memory.py  state.py  ttl.py
src/ratelimiter/teaching/: __init__.py  race_explainer.py  unsafe_fixed_window.py  (+1 more)
tests/benchmarks/: benchmark_algorithms.py
tests/concurrency/: test_eviction_under_contention.py  test_hot_key_contention.py  test_lock_striping.py  test_many_key_contention.py  test_no_over_admission.py  test_unsafe_race_failure.py  test_unsafe_token_bucket_race.py
tests/fixtures/: configs.py  fake_clock.py  traffic_patterns.py
tests/integration/: test_benchmark.py  test_cli_commands.py  test_cli_modules.py  test_metrics_snapshots.py  test_storage_backend_contract.py
tests/lifecycle/: test_eviction_does_not_corrupt_state.py  test_lru_eviction.py  test_ttl_expiry.py
tests/unit/: test_base_limiter.py  test_cli_helpers.py  test_clock_extended.py  test_config_edge_cases.py  test_config_extended.py  test_config_parser.py  test_cost_validation.py  test_decision_contract.py  test_decision_extended.py  test_factory.py  test_failure_demo.py  test_fake_clock.py  test_fixed_window.py  test_leaky_bucket.py  test_leaky_bucket_extended.py  test_logging.py  test_metrics_extended.py  test_package_exports.py  test_sliding_window_counter.py  test_snapshots.py  test_storage_memory_extended.py  test_teaching.py  test_token_bucket.py  test_unsafe_reexports.py
tests/workers/: test_leaky_drain_worker.py  test_lifecycle_extended.py  test_scheduler.py  test_scheduler_extended.py  test_scheduler_run_loop.py  test_sweeper_lifecycle.py  test_worker_shutdown.py  test_worker_validation.py
(+13 files in other folders)
