[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "capstone-rate-limiter"
dynamic = ["version"]
description = "A CLI-first Python rate limiting capstone with concurrency, storage, workers, metrics, and deterministic tests."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Rate Limiter Capstone" }]
keywords = ["rate-limiting", "token-bucket", "concurrency", "cli", "capstone"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "mypy>=1.8", "pytest-cov>=4"]
yaml = ["PyYAML>=6"]
all = ["pytest>=8", "mypy>=1.8", "pytest-cov>=4", "PyYAML>=6"]

[project.scripts]
ratelimit = "ratelimiter.cli.main:main"

[tool.setuptools.dynamic]
version = { attr = "ratelimiter.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ratelimiter = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
addopts = "-ra"
filterwarnings = [
    "ignore:'ratelimiter.cli.main' found in sys.modules:RuntimeWarning",
]

markers = [
    "timing_dependent: tests that rely on thread scheduling or race windows",
]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["ratelimiter"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.coverage.run]
source = ["ratelimiter"]
branch = false

[tool.coverage.report]
fail_under = 95
show_missing = true
precision = 1
skip_empty = true
